# teamwork-integration-slack-app

./: README.md  pyproject.toml
teamwork_integration_slack_app/: app.py
teamwork_integration_slack_app/examples/: app_for_local.py
teamwork_integration_slack_app/teamwork_api/: tw_auth.py
tests/archives/: app_for_lambda.py  app_for_lambda_v2.py  app_for_local.py
tests/teamwork_payload_examples/: calcdailyhours_template.jsonc  checkdailyhours_template.jsonc  post_leave_template.jsonc  search_employee_list_by_filters.jsonc
