[tool.poetry]
name = "teamwork-integration-slack-app"
version = "0.1.0"
description = ""
authors = ["convo-vinny <vincent.venutolo@convorelay.com>"]
readme = "README.md"
packages = [
    { include = "teamwork_integration_slack_app" },
    { include = "teamwork_api", from = "teamwork_integration_slack_app" }
]

[tool.poetry.dependencies]
python = "^3.11"
logging = "^0.4.9.6"
python-dotenv = "^0.21.0"
slack-bolt = "^1.16.1"
datetime = "^4.9"
slack-sdk = "^3.19.5"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"